# qubes-system76-firmware

./: .gitmodules  .qubesbuilder  0001-Drop-hidapi-and-redox_hwio-dependencies.patch  0001-Drop-hidapi-dependency.patch  0002-Drop-redox_hwio-dependency.patch  0200-Qubes-OS-support.patch  0201-Use-system-libsodium-instead-of-sodalite.patch  0202-Vendor-base32-crate.patch  0203-Use-libsodium-instead-of-rand-crate.patch  0300-Use-a-tar-subprocess-instead-of-pure-Rust-implementa.patch  0301-Stop-using-crates.io-dependencies-and-drop-daemon.patch  0400-Drop-lazy_static-dependency.patch  Cargo.toml  system76-firmware.spec  system76-firmware.spec.in  vendor.tgz
.cargo/: config.toml
empty/: Cargo.toml
src/: util.rs
