[package]
name = "system76-firmware"
version = "1.0.69"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2021"

[workspace]
members = [
]

[[bin]]
name = "system76-firmware-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
buildchain = { version = "0.5", path = "../buildchain" }
clap = { version = "3", features = ["derive"] }
ecflash = { version = "0.1", path = "ecflash" }
libc = "0.2"
plain = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.8"
uuid = "1.4"
system76_ectool = { version = "0.3.8", features = ["std"], path = "ec/tool", default-features = false }

[profile.release]
lto = true
